--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -59,10 +59,10 @@ jobs:
 
       # 5️⃣ Upload combined results
       - name: Upload results
-        uses: actions/upload-artifact@v3
-        with:
-          name: scorecard-results
-          path: combined_results.json
+  uses: actions/upload-artifact@v4
+  with:
+    name: scorecard-results
+    path: scorecard_results/
 
       # 6️⃣ Update badge in README
       - name: Update badge
