--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -5,7 +5,10 @@ on:
   schedule:
     - cron: '0 3 * * *'  # every day at 3 AM UTC
 
-jobs:
+permissions:
+  contents: write
+  
+  jobs:
   scorecard:
     runs-on: ubuntu-latest
 
