--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -1,27 +1,28 @@
 name: Daily Scorecard Scan
 
+# Trigger: manual or daily at 3 AM UTC
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 3 * * *'  # every day at 3 AM UTC
+    - cron: '0 3 * * *'
 
+# Give permission to push README updates
 permissions:
   contents: write
-  
-  jobs:
+
+jobs:
   scorecard:
     runs-on: ubuntu-latest
 
     steps:
       # 1️⃣ Checkout repo
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # 2️⃣ Install jq
-      - name: Install jq
-        run: sudo apt-get install -y jq
+      # 2️⃣ Install dependencies
+      - name: Install jq and curl
+        run: sudo apt-get update && sudo apt-get install -y jq curl
 
-      # 3️⃣ Fetch all repositories
+      # 3️⃣ Get all repositories using GH_PAT
       - name: Get all repositories
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
@@ -37,7 +38,7 @@ permissions:
             ((page++))
           done
 
-      # 4️⃣ Run Scorecard in batches and combine results
+      # 4️⃣ Run Scorecard in batches of 20 and combine results
       - name: Run Scorecard in batches
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
@@ -60,22 +61,27 @@ permissions:
           done
           echo "]" >> combined_results.json
 
-      # 5️⃣ Upload combined results
+      # 5️⃣ Upload combined results as artifact (v4)
       - name: Upload results
-  uses: actions/upload-artifact@v4
-  with:
-    name: scorecard-results
-    path: scorecard_results/
+        uses: actions/upload-artifact@v4
+        with:
+          name: scorecard-results
+          path: combined_results.json
 
       # 6️⃣ Update badge in README
-      - name: Update badge
+      - name: Update Scorecard badge
         run: |
           score=$(jq '[.[].Score]' combined_results.json | add / length | awk '{printf "%.1f", $1}')
-          badge="https://img.shields.io/badge/Scorecard-${score}-brightgreen"
-          # Replace placeholder in README
+          # Change color based on score
+          if (( $(echo "$score >= 8" | bc -l) )); then color="brightgreen"
+          elif (( $(echo "$score >= 5" | bc -l) )); then color="yellow"
+          else color="red"; fi
+          badge="https://img.shields.io/badge/Scorecard-${score}-${color}"
+          # Replace placeholder badge in README
           sed -i "s|!\[Scorecard\](.*)|![Scorecard](${badge})|" README.md
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add README.md
-          git commit -m "Update Scorecard badge"
+          git diff --exit-code || git commit -am "Update Scorecard badge"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
