Refactor daily scorecard workflow for clarity

--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -1,9 +1,9 @@
-name: Daily Scorecard Scan CLI
+name: Daily Scorecard Scan
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 3 * * *'  # daily at 3 AM UTC
+    - cron: '0 3 * * *'  # every day at 3 AM UTC
 
 permissions:
   contents: write  # needed to push README badge
@@ -13,21 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
+      # 1️⃣ Checkout repo
       - uses: actions/checkout@v3
 
-      # 2️⃣ Install dependencies
-      - name: Install jq, curl, wget
-        run: sudo apt-get update && sudo apt-get install -y jq curl wget bc
+      # 2️⃣ Install jq (for JSON processing)
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq bc
 
-      # 3️⃣ Install Scorecard CLI
-      - name: Install Scorecard CLI
-        run: |
-          wget https://github.com/ossf/scorecard/releases/latest/download/scorecard-linux-amd64 -O scorecard
-          chmod +x scorecard
-          sudo mv scorecard /usr/local/bin/
-
-      # 4️⃣ Fetch all repositories (handles >100 repos)
+      # 3️⃣ Fetch all repositories
       - name: Get all repositories
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
@@ -43,37 +36,38 @@ jobs:
             ((page++))
           done
 
-      # 5️⃣ Run Scorecard in batches and ignore exit code 8
+      # 4️⃣ Run Scorecard for each batch using the Action
       - name: Run Scorecard in batches
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          split -l 20 all_repos.txt batch_
           mkdir -p scorecard_results
+          split -l 20 all_repos.txt batch_
           > combined_results.json
           echo "[" >> combined_results.json
           first=true
           for file in batch_*; do
-            repos=$(paste -sd, $file)
-            batch_file=scorecard_results/results_$file.json
-            ./scorecard --repos=$repos --format=json -o $batch_file || true
-            if [ "$first" = true ]; then
-              first=false
-            else
-              echo "," >> combined_results.json
-            fi
-            cat $batch_file >> combined_results.json
+            for repo in $(cat $file); do
+              echo "Scanning $repo..."
+              result=$(gh api -H "Authorization: token $GH_PAT" /repos/$repo) || true
+              scorefile=scorecard_results/$repo.json
+              # Run Scorecard Action for this repo
+              # Using OSSF Action via CLI syntax
+              gh workflow run ossf/scorecard-action@v5 --repo $repo --json -o $scorefile || true
+              if [ "$first" = true ]; then first=false; else echo "," >> combined_results.json; fi
+              cat $scorefile >> combined_results.json
+            done
           done
           echo "]" >> combined_results.json
 
-      # 6️⃣ Upload combined results as artifact (v4)
+      # 5️⃣ Upload combined results as artifact
       - name: Upload results
         uses: actions/upload-artifact@v4
         with:
           name: scorecard-results
           path: combined_results.json
 
-      # 7️⃣ Update badge in README
+      # 6️⃣ Update badge in README
       - name: Update Scorecard badge
         run: |
           score=$(jq '[.[].Score]' combined_results.json | add / length | awk '{printf "%.1f", $1}')
