--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -1,19 +1,15 @@
-name: Scorecard Analysis
+name: OpenSSF Scorecard
 
 on:
   push:
-    branches:
-      - "main"
-      - "master"
-  schedule:
-    # Optional: weekly scan, e.g., Sunday at midnight UTC
-    - cron: "0 0 * * 0"
+    branches: [main]   # run on pushes to main
+  pull_request:        # run on PRs
+  schedule:            # optional: weekly scan
+    - cron: "0 0 * * 0"   # every Sunday at 00:00 UTC
 
 permissions:
-  # Required for publishing results & pushing badges
   security-events: write
   id-token: write
-  # Recommended for GitHub API read actions
   contents: read
   issues: read
   pull-requests: read
@@ -21,24 +17,23 @@ permissions:
 
 jobs:
   scorecard:
-    name: Run OpenSSF Scorecard
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
+      # Checkout code
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # Step 2: Run the Scorecard Action
-      - name: Run OpenSSF Scorecard
+      # Run OpenSSF Scorecard
+      - name: Run Scorecard
         uses: ossf/scorecard-action@v2
         with:
-          results_file: scorecard-results.json   # Save full results
-          results_format: sarif                   # Format for GitHub Security scanning
-          publish_results: true                   # Optional: publish to OpenSSF API + badge
+          results_file: scorecard-results.json   # save JSON results
+          publish_results: true                   # publish to OpenSSF Scorecard API
+          results_format: sarif                   # optional: for GitHub security scanning
 
-      # Step 3: Upload SARIF results to GitHub Code Scanning
-      - name: Upload Scorecard SARIF
+      # Upload SARIF results to GitHub Security (optional)
+      - name: Upload SARIF results
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: scorecard-results.sarif
