--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -3,34 +3,15 @@ name: OpenSSF Scorecard
 on:
   push:
     branches: [main]
-  pull_request:
-  schedule:
-    - cron: "0 0 * * 0"  # Weekly on Sunday at midnight UTC
-
-permissions:
-  security-events: write
-  id-token: write
-  contents: read
-  issues: read
-  pull-requests: read
-  checks: read
 
 jobs:
   run-scorecard:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Run OpenSSF Scorecard
         uses: ossf/scorecard-action@v2.4.3
         with:
           results_file: scorecard-results.json
-          results_format: sarif
-          publish_results: true
-
-      - name: Upload Scorecard SARIF to GitHub
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: scorecard-results.sarif
