--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          persist-credentials: true  # allows git push
+          persist-credentials: true  # allows git push using GITHUB_TOKEN
 
       # Step 2: Run OpenSSF Scorecard
       - name: Run Scorecard
@@ -41,12 +41,12 @@ jobs:
 
       # Step 4: Save historical results in repo
       - name: Save historical results
-  run: |
-    TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
-    mkdir -p scorecard-history
-    cp scorecard-results.json scorecard-history/scorecard-$TIMESTAMP.json
-    git config --global user.name "Dippp10"
-    git config --global user.email "deepikakarthik697@gmail.com"
-    git add scorecard-history/scorecard-$TIMESTAMP.json
-    git commit -m "Add Scorecard results $TIMESTAMP" || echo "No changes to commit"
-    git push
+        run: |
+          TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
+          mkdir -p scorecard-history
+          cp scorecard-results.json scorecard-history/scorecard-$TIMESTAMP.json
+          git config --global user.name "Dippp10"
+          git config --global user.email "deepikakarthik697@gmail.com"
+          git add scorecard-history/scorecard-$TIMESTAMP.json
+          git commit -m "Add Scorecard results $TIMESTAMP" || echo "No changes to commit"
+          git push
