--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -1,3 +1,10 @@
+name: OpenSSF Scorecard Publish
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+
 permissions:
   security-events: write
   id-token: write
@@ -5,24 +12,17 @@ permissions:
   issues: read
   pull-requests: read
   checks: read
-  
-  name: OpenSSF Scorecard
-
-on:
-  push:
-    branches: [main]
 
 jobs:
   run-scorecard:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Run OpenSSF Scorecard
+      - name: Run Scorecard
         uses: ossf/scorecard-action@v2.4.3
         with:
           results_file: scorecard-results.json
-
-publish_results: true
-results_format: sarif
+          publish_results: true
+          results_format: sarif
