--- a/.github/workflows/daily_scorecard.yml
+++ b/.github/workflows/daily_scorecard.yml
@@ -17,9 +17,11 @@ jobs:
   run-scorecard:
     runs-on: ubuntu-latest
     steps:
+      # Checkout your repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Run Scorecard and publish results
       - name: Run Scorecard
         uses: ossf/scorecard-action@v2.4.3
         with:
