--- a/.github/workflows/openssfscorecard.yml
+++ b/.github/workflows/openssfscorecard.yml
@@ -6,26 +6,29 @@ on:
       - main
   pull_request:
   schedule:
-    - cron: '0 2 * * 1'   # Every Monday at 02:00 UTC
+    - cron: '0 2 * * 1'
 
+# ✅ Global permissions MUST be read-only
 permissions:
   contents: read
-  security-events: write
-  id-token: write
-  actions: read
 
 jobs:
-  analysis:
-    name: Scorecard Analysis
+  scorecard:
     runs-on: ubuntu-latest
 
+    # ✅ Write permissions only inside the job
+    permissions:
+      contents: read
+      security-events: write
+      id-token: write
+      actions: read
+
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Run OpenSSF Scorecard
         uses: ossf/scorecard-action@v2.3.1
         with:
-          results_file: scorecard-results.sarif
           results_format: sarif
           publish_results: true
